<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="donut_text">Donuts are glazed and sprinkled with candy.</string>
    <string name="ice_cream_text">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_text">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_cd">a donut</string>
    <string name="ice_cream_cd">an ice cream sandwich</string>
    <string name="froyo_cd">a FroYo</string>
    <string name="cart_icon_cd">Add to shopping cart</string>
    <string name="name_label_text">Name</string>
    <string name="enter_name_hint">Enter your name</string>
    <string name="address_label_text">Address</string>
    <string name="enter_address_hint">Enter your address</string>
    <string name="phone_label_text">Phone</string>
    <string name="enter_phone_hint">Enter your phone</string>
    <string name="note_label_text">Note</string>
    <string name="enter_note_hint">Enter your note</string>
    <string name="delivery_label_text">Choose a delivery method: </string>
    <string name="rb1_sameday_label">Same day messenger service</string>
    <string name="rb2_nextday_label">Next day ground delivery</string>
    <string name="rb3_pickup_label">Pick up</string>
    <string-array name="phone_type_labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
</resources>